P01/Tests/SyntaxErrors/badtrans2.tm
states 3
B
A -
C +
alphabet 2 0 1
B 2 A 1 R
